# bangumini-tauri

./: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: bgm.rs  main.rs  net.rs  utils.rs
src-tauri/src/bgm/: auth.rs  index.rs  subject.rs
src/api/: auth.ts  index.ts  subject.ts
src/api/@types/: auth.d.ts  subject.d.ts
src/components/: Avatar.tsx  BangumiLogo.tsx  ClickToRefresh.tsx  Image.tsx  Loading.tsx  PageCenter.tsx  index.tsx
src/database/: conn.ts  index.ts
src/database/models/: former_name.ts  index.ts  progress_activity.ts
src/event/: index.ts  state.ts
src/pages/: Index.tsx  Signup.tsx
src/pages/index/: Home.tsx  Signup.tsx
src/router/: Nav.tsx  index.tsx  router.tsx
src/theme/: expanded-theme.d.ts  index.tsx  theme.base.ts  theme.dark.ts  theme.light.ts  theme.ts
src/utils/: index.ts
src/views/auth/: SignUpForm.tsx
src/views/subject/: index.ts
src/views/subject/anime/: Episode.tsx  Subject.tsx
