[package]
name = "bangumini-tauri"
version = "0.0.1"
description = "Bangumini tauri"
authors = ["Vick Scarlet<vick@syaro.io>"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.22", features = ["json", "cookies", "multipart", "blocking"] }
tokio = { version = "1.34.0", features = ["full"] }
reqwest_cookie_store = "0.6.0"
anyhow = "1.0.75"
chrono = "0.4.31"
scraper = "0.18.1"
regex = "1.10.2"
thiserror = "1.0.50"
cookie_store = "0.20.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
